<resources>
    <string name="app_name">Finanças simples - Controle financeiro pessoal</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="expense">Despesa</string>
    <string name="income">Receita</string>
    <string name="name">Nome</string>
    <string name="description">Descrição</string>
    <string name="price">Valor</string>
    <string name="category">Categoria</string>
    <string name="due_date">Vencimento</string>
    <string name="extra_obs">Observações</string>
    <string name="save">Salvar</string>
    <string name="remove_transaction">Deletar transação?</string>
    <string name="deseja_remover">Deseja deletar esta transação?</string>
    <string name="remover">Remover</string>
    <string name="cancelar">Cancelar</string>
    <string name="last_month">Mês Anterior</string>
    <string name="next_month">Próximo Mês</string>

    <string name="pago">Pago</string>
    <string name="pendente">Pendente</string>

    <string name="desc_detail">Descrição:</string>
    <string name="price_detail"> %1$s %2$s</string>
    <string name="category_detail">Categoria: %1$s </string>
    <string name="due_date_detail">Vencimento: %1$s</string>
    <string name="update_paid_out_detail">Alterar para %1$s</string>
    <string name="situation">Situação: </string>


</resources>