<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".view.DetailsActivity">

    <TextView
        android:id="@+id/text_type_transaction_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="8dp"
        android:background="@drawable/shape_type_expense"
        android:padding="4dp"
        android:text="Tipo de transação"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/text_name_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="nome"
        android:layout_marginBottom="16dp"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold" />

    <View
        android:id="@+id/divider2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/design_default_color_primary" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/text_price_detail"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            android:text="@string/price_detail" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:gravity="center"
            android:background="#E8EAF6"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text_situation_detail"
                android:layout_width="wrap_content"
                android:layout_height="24dp"
                android:gravity="center"
                android:text="Pago" />

            <ImageView
                android:id="@+id/img_paid_out_detail"
                android:layout_width="24dp"
                android:layout_height="24dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_weight="2"
            android:background="#E8EAF6"
            android:orientation="vertical">

            <Button
                android:id="@+id/button_edit_paid_out"
                android:layout_width="match_parent"
                android:layout_height="40sp"
                android:textSize="12sp"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:backgroundTint="#94ACAEAF"
                android:text="@string/update_paid_out_detail"/>



        </LinearLayout>

    </LinearLayout>

    <View
        android:id="@+id/divider1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/design_default_color_primary" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_marginTop="16dp"
        android:text="@string/desc_detail" />

    <EditText
        android:id="@+id/text_desc_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@drawable/shape_description"
        android:ems="10"
        android:focusable="false"
        android:gravity="start|top"
        android:textStyle="normal"
        android:textSize="14sp"
        android:padding="4dp"
        android:inputType="textMultiLine" />

    <TextView
        android:id="@+id/text_category_detail"
        android:layout_width="match_parent"
        android:layout_height="24dp"
        android:text="@string/category_detail" />

    <TextView
        android:id="@+id/text_due_date_detail"
        android:layout_width="match_parent"
        android:layout_height="24dp"
        android:text="@string/due_date_detail" />

    <View
        android:id="@+id/divider3"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/design_default_color_primary" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textAlignment="center"
        android:text="Observações:" />

    <EditText
        android:id="@+id/text_obs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@drawable/shape_description"
        android:ems="10"
        android:textStyle="normal"
        android:textSize="14sp"
        android:focusable="false"
        android:padding="4dp"
        android:gravity="start|top"
        android:inputType="textMultiLine" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="5"
        android:orientation="vertical"
        android:paddingTop="16dp">

        <Button
            android:id="@+id/button_delete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/red"
            android:layout_marginBottom="16dp"
            android:text="Excluir" />

        <Button
            android:id="@+id/button_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Editar" />

    </LinearLayout>

</LinearLayout>